fix input height on ios

--- a/src/shared/ui/editor/features/input/input.module.css
+++ b/src/shared/ui/editor/features/input/input.module.css
@@ -36,4 +36,5 @@
 .button {
     position: absolute;
     right: 0;
+    line-height: 20px;
 }
